6283
Oops, missed the error.
```
b.scala:5: error: ambiguous reference to overloaded definition,
both method f in class A of type [T](x: T, xs: T*)T
and  method f in class A of type [T](x: T)T
match argument types (Int)
  f(5)
  ^
one error found
```
